AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
html {
    height: 100%;
    min-height: 100%;
}

body {
    font-family: "Lucida Sans",Ubuntu,"Lucida Grande",Tahoma,Verdana,Arial,sans-serif;
    font-size: 14px;
    line-height: 20px;
    color: #333;
    background-color: white;
    overflow-x: hidden;
    overflow-y: auto;
}

hr {
    margin: 0;
}

.row {
    overflow: hidden;
}

.row-fix {
    padding-right: -15px;
    padding-left: -15px;
}

.inline-display {
    display: inline-block;
}
p {
    font-size: 17px;
    font-family: Helvetica;
    margin: 0;
    overflow: hidden;
    color: black;
}

